# streamlit_deepseek

./: install_deps.py  pyproject.toml  requirements.txt  streamlit.py
